Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/TCollection/TCollectionAsciiString.cs

		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_CtorD142C0D4(IntPtr astring,char message);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_Ctor54DBAE97(IntPtr astring,string message);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_CtorB82186D3(IntPtr astring,IntPtr message);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_Ctor77E26705(IntPtr astring,char replaceNonAscii);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_AssignCatBCA09447(IntPtr instance, char other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_AssignCatE8219145(IntPtr instance, int other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_AssignCatD82819F3(IntPtr instance, double other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_AssignCat9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_AssignCat66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Capitalize(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_CatBCA09447(IntPtr instance, char other);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_CatE8219145(IntPtr instance, int other);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_CatD82819F3(IntPtr instance, double other);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_Cat9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_Cat66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Center71824F83(IntPtr instance, int Width,char Filler);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_ChangeAll4A8EEFF6(IntPtr instance, char aChar,char NewChar,bool CaseSensitive);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Clear(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Copy9381D4D(IntPtr instance, string fromwhere);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Copy66CFACD0(IntPtr instance, IntPtr fromwhere);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_FirstLocationInSet10E3C1BB(IntPtr instance, IntPtr Set,int FromIndex,int ToIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_FirstLocationNotInSet10E3C1BB(IntPtr instance, IntPtr Set,int FromIndex,int ToIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Insert71824F83(IntPtr instance, int where,char what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_InsertC9F1A165(IntPtr instance, int where,string what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_InsertFCE887E8(IntPtr instance, int where,IntPtr what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_InsertAfterFCE887E8(IntPtr instance, int Index,IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_InsertBeforeFCE887E8(IntPtr instance, int Index,IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsEqual9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsEqual66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsDifferent9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsDifferent66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsLess9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsLess66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsGreater9381D4D(IntPtr instance, string other);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsGreater66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_LeftAdjust(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_LeftJustify71824F83(IntPtr instance, int Width,char Filler);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_Location10E3C1BB(IntPtr instance, IntPtr other,int FromIndex,int ToIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_LocationB9967886(IntPtr instance, int N,char C,int FromIndex,int ToIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_LowerCase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Prepend66CFACD0(IntPtr instance, IntPtr other);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_RemoveAll6D30D0F7(IntPtr instance, char C,bool CaseSensitive);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_RemoveAllBCA09447(IntPtr instance, char what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_Remove5107F6FE(IntPtr instance, int where,int ahowmany);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_RightAdjust(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_RightJustify71824F83(IntPtr instance, int Width,char Filler);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_Search9381D4D(IntPtr instance, string what);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_Search66CFACD0(IntPtr instance, IntPtr what);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_SearchFromEnd9381D4D(IntPtr instance, string what);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_SearchFromEnd66CFACD0(IntPtr instance, IntPtr what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_SetValue71824F83(IntPtr instance, int where,char what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_SetValueC9F1A165(IntPtr instance, int where,string what);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_SetValueFCE887E8(IntPtr instance, int where,IntPtr what);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_SplitE8219145(IntPtr instance, int where);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_SubString5107F6FE(IntPtr instance, int FromIndex,int ToIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr TCollection_AsciiString_Token800FADE1(IntPtr instance, string separators,int whichone);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_TruncE8219145(IntPtr instance, int ahowmany);
		[DllImport("NaroOccCore.dll")]
		private static extern void TCollection_AsciiString_UpperCase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern char TCollection_AsciiString_ValueE8219145(IntPtr instance, int where);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_HashCodeCAFD1949(IntPtr astring,int Upper);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsEqualB82186D3(IntPtr string1,IntPtr string2);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsEqual54DBAE97(IntPtr string1,string string2);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_HASHCODECAFD1949(IntPtr astring,int Upper);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_ISSIMILARB82186D3(IntPtr string1,IntPtr string2);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsEmpty(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_IntegerValue(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsIntegerValue(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsRealValue(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool TCollection_AsciiString_IsAscii(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_Length(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern double TCollection_AsciiString_RealValue(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern string TCollection_AsciiString_ToCString(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int TCollection_AsciiString_UsefullLength(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public TCollectionAsciiString(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{ TCollectionAsciiString_Dtor(Instance); }

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void TCollectionAsciiString_Dtor(IntPtr instance);
	}
}
